// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preloadPrefetch > should add prefetch to dynamically imported file 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite App</title>
    <script type="module" crossorigin src="/assets/index-C5-3278v.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BLu0-TaQ.css">
    <link rel="prefetch" href="/assets/form-validation-DZda6X8H.js">
  </head>
  <body>
    <h1>Test App</h1>
  </body>
</html>"
`;

exports[`preloadPrefetch > should add preload to WOFF2 font files 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite App</title>
    <script type="module" crossorigin src="/assets/index-C5-3278v.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BLu0-TaQ.css">
    <link rel="preload" href="/assets/Roboto-Bold-OBUL28o9.woff2" type="font/woff2" as="font" crossorigin="anonymous">
    <link rel="preload" href="/assets/Roboto-Medium-DRylU_ql.woff2" type="font/woff2" as="font" crossorigin="anonymous">
  </head>
  <body>
    <h1>Test App</h1>
  </body>
</html>"
`;

exports[`preloadPrefetch > should add preload to WOFF2 font files at start of <head> 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link rel="preload" href="/assets/Roboto-Bold-OBUL28o9.woff2" type="font/woff2" as="font" crossorigin="anonymous">
    <link rel="preload" href="/assets/Roboto-Medium-DRylU_ql.woff2" type="font/woff2" as="font" crossorigin="anonymous">

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite App</title>
    <script type="module" crossorigin src="/assets/index-C5-3278v.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BLu0-TaQ.css">
  </head>
  <body>
    <h1>Test App</h1>
  </body>
</html>"
`;
